--- a/src/others/convert_to_DTNL_format.ipynb
+++ b/src/others/convert_to_DTNL_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,33 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['studentCode', 'nationalID', 'fullnameTH', 'tel', 'nickname',\n",
-       "       'facebook', 'lineID', 'imageURL', 'religion', 'nameTH', 'surnameTH',\n",
-       "       'realHouseTH', 'realHouseEN', 'realHouseURL', 'regularDrug',\n",
-       "       'congenitalDisease', 'foodAllergies', 'drugAllergy', 'disorders',\n",
-       "       'emergency_tel', 'emergency_tel_relation', 'dynamic/faculty',\n",
-       "       'dynamic/nameprefix'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +29,7 @@
     "    if i in df.columns:\n",
     "        del df[i]\n",
     "\n",
-    "df['dynamic/faculty'] = df['facultyTH'] + ' - ' + df['facultyEN'].map(lambda of: of.replace('Of', 'of'))\n",
+    "df['dynamic/faculty'] = df['facultyTH'] + ' - ' + df['facultyEN'].map(lambda of: of.replace(' Of ', ' of ').replace(' And ', ' and '))\n",
     "df['dynamic/nameprefix'] = df['titleTH'].map({\"นาย\": \"นาย - Mr.\",  \"นางสาว\": \"นางสาว - Miss.\"}.get)\n",
     "df['head/realHouse'] = df['realHouseTH'].map({\n",
     "    \"บ้านคิดส์\": \"บ้านคิดส์ - Kids\",\n",
@@ -125,21 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# w = pd.ExcelWriter('./convertToDTNL.xlsx')\n",
+    "w = pd.ExcelWriter('./convertToDTNL.xlsx')\n",
     "f = open('./convertToDTNL.json', 'w')\n",
-    "# df.to_excel(w)\n",
+    "df.to_excel(w)\n",
     "f.write(df.to_json(orient='records', force_ascii=False).replace('\\/', '/').replace('\\\\\\\\u0026', '&'))\n",
-    "# w.save()\n",
+    "w.save()\n",
     "f.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +121,7 @@
       "text/plain": [
        "Index(['dynamic/studentCode', 'dynamic/nationalID', 'dynamic/fullname',\n",
        "       'dynamic/tel', 'dynamic/nickname', 'dynamic/facebook', 'dynamic/lineID',\n",
-       "       'hidden/imageURL', 'dynamic/religion', 'dynamic/realHouseURL',\n",
+       "       'hidden/imageURL', 'dynamic/religion', 'head/realHouseURL',\n",
        "       'dynamic/regularDrug', 'dynamic/congenitalDisease',\n",
        "       'dynamic/foodAllergies', 'dynamic/drugAllergy', 'dynamic/disorders',\n",
        "       'dynamic/emergency_tel', 'dynamic/emergency_tel_relation',\n",
@@ -155,7 +129,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
